Fix notice overlapping sidebar on mobile

--- a/assets/stylesheets/components/_mobile.scss
+++ b/assets/stylesheets/components/_mobile.scss
@@ -117,7 +117,10 @@
     left: 0;
     padding: 0 .5rem;
 
-    ~ ._sidebar { padding-bottom: 4rem; }
+    ~ ._sidebar {
+      margin-top: 2.5rem;
+      padding-bottom: 4rem;
+    }
   }
 
   ._notice-text { font-size: .75em; }
